added login drop downs

--- a/index.html
+++ b/index.html
@@ -16,31 +16,40 @@
     </style>
   </head>
   <body ng-controller="MainCtrl">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <a class="navbar-brand" href="/">Db Throwdown</a>
-      <nav class="navbar-collapse" role="navigation">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="#" class="btn" ng-click="login('github')">
-              <i class="icon-twitter"></i>
-              Sign in w/ Twitter
-            </a>
-          </li>
-          <li>
-            <a href="#" class="btn" ng-click="login('github')">
-              <i class="icon-github"></i>
-              Sign in w/ Github
-            </a>
-          </li>
-          <li>
-            <a href="#" class="btn" ng-click="login('persona')">
-              <i class="icon-lock"></i>
-              Sign in w/ Persona
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <header class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+            <i class="icon-bar"></i>
+            <i class="icon-bar"></i>
+            <i class="icon-bar"></i>
+          </button>
+        </div>
+        <a class="navbar-brand" href="/">Db Throwdown</a>
+        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#" class="btn" ng-click="login('github')">
+                <i class="icon-twitter"></i>
+                Sign in w/ Twitter
+              </a>
+            </li>
+            <li>
+              <a href="#" class="btn" ng-click="login('github')">
+                <i class="icon-github"></i>
+                Sign in w/ Github
+              </a>
+            </li>
+            <li>
+              <a href="#" class="btn" ng-click="login('persona')">
+                <i class="icon-lock"></i>
+                Sign in w/ Persona
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="container"> 
       <table class="table">
         <tr>
@@ -84,7 +93,9 @@
         </tr>
       </table>
     </div>
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
     <script type='text/javascript'
               src='https://cdn.firebase.com/v0/firebase-simple-login.js'>
             </script>
