--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Db Throwdown</a>
+          <div class="pull-right">
           <a href="#" class="btn" ng-click="login('github')">
             <i class="icon-twitter"></i>
             Twitter
@@ -32,6 +33,7 @@
               <i class="icon-lock"></i>
               Persona
           </a>
+          </div>
         </div>
         </nav>
       </div>
