fixed typo with link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Db Throwdown</a>
           <div class="pull-right">
-          <a href="#" class="btn" ng-click="login('github')">
+          <a href="#" class="btn" ng-click="login('twitter')">
             <i class="icon-twitter"></i>
             Twitter
           </a>
